[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/frames/elf_m_idle_anim_f2.png" type="Texture" id=1]
[ext_resource path="res://Assets/frames/elf_m_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://Assets/frames/elf_m_run_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://Assets/frames/elf_m_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Assets/frames/elf_m_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://Assets/frames/elf_m_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://Assets/frames/elf_m_run_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://Assets/frames/elf_m_run_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://Player/Player.gd" type="Script" id=9]
[ext_resource path="res://Collision/HurtBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://SFX/Player/PlayerShootSFX.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.30179, 7.23406 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.24868, 5.97622 )

[sub_resource type="Animation" id=4]
resource_name = "Damage"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 1.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Normal"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 9 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.132427, 3.31082 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 10 )]
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.166855, 5.08906 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 4 )
anims/Normal = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
pitch_scale = 1.42

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]

[editable path="HurtBox"]
